# mediathequeroubaix.py

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: codeql.yml  cookiecutter.yml  dependencies.yml  draft_release.yml  release.yml  test.yml
doc/: banner.xcf  cli_commands_output.md  logo.xcf  showcode.app.config.json
docs/: api_docs.md
src/mediathequeroubaix/: __main__.py  app.py  authenticate.py  cli_test.py  cli_utils.py  client.py  client_test.py  config.py  holds.py  loans.py  login.py  main.py  print_loans.py
src/mediathequeroubaix/auth/: authenticate.py  authenticate_test.py  authenticated_session.py  get_user.py  get_user_test.py
src/mediathequeroubaix/fetch_loans/: base64decode_test.py  extract_token.py  extract_token_test.py  fetch_loans.py  fetch_loans_test.py  loan.py  loan_test.py  parse_loans.py  parse_loans_test.py
src/mediathequeroubaix/get_holds/: extract_token.py  extract_token_test.py  get_holds.py  get_holds_test.py  hold.py  hold_test.py  parse_holds.py  parse_holds_test.py
src/mediathequeroubaix/get_loans/: base64decode_test.py  extract_token_test.py  get_loans.py  get_loans_test.py  loan.py  loan_test.py  parse_loans.py  parse_loans_test.py
src/mediathequeroubaix/login/: authenticated_session.py  do_login.py  get_user.py  get_user_test.py  login.py  login_test.py  user.py
src/mediathequeroubaix/renew/: renew.py  renew_test.py
src/mediathequeroubaix/shared/: base64decode.py  base64decode_test.py  extract_input_value.py  get_personal_space.py
