[project]
name = "mediathequeroubaix"
version = "1.6.1"
description = "Client for the library of Roubaix (Médiathèque Roubaix)"
authors = [
    {name = "Thomas Queste", email = "tom@tomsquest.com"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "returns>=0.23.0",
    "rich>=13.9.4",
    "typer>=0.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "types-requests>=2.32.0.20241016",
]

[project.urls]
Changelog = "https://github.com/tomsquest/mediathequeroubaix.py/blob/master/CHANGELOG.md"
Releases = "https://github.com/tomsquest/mediathequeroubaix.py/releases"
Repository = "https://github.com/tomsquest/mediathequeroubaix.py"

[project.scripts]
mediathequeroubaix = "mediathequeroubaix.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/src"]
exclude = ["*_test.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
follow_imports = "skip"
